--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -159,14 +159,13 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MagicLeap_Right_Trackpad_Touch)
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MagicLeap_Right_Bumper)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="Drop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="Decoy",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="QuickHeal",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
-+ActionMappings=(ActionName="TurnFlashlight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="TurnFlashlight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="MainMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="SwitchWorld",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
