--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -41,9 +41,9 @@ InternationalizationPreset=English
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
-bCookMapsOnly=False
-bCompressed=False
-bSkipEditorContent=False
+bCookMapsOnly=True
+bCompressed=True
+bSkipEditorContent=True
 bSkipMovies=False
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
@@ -69,7 +69,7 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="ClockWidgetLevel")
-+MapsToCook=(FilePath="FamilyHouseLevel")
-+MapsToCook=(FilePath="MainMenuLevel")
++MapsToCook=(FilePath="/Game/Levels/ClockWidgetLevel")
++MapsToCook=(FilePath="/Game/Levels/FamilyHouseLevel")
++MapsToCook=(FilePath="/Game/Levels/MainMenuLevel")
 
