--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,3 +78,6 @@ TileSizeUU=544.000000
 CellSize=2.000000
 CellHeight=2.000000
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
+
